# long-story

./: .env.example  .gitignore  README.md  novel_ai.py  novel_writer.py  pyproject.toml  verify_art.py  verify_proofread.py
scripts/: launch.ps1  launch.sh
src/novel_memory/: __init__.py
src/novel_memory/agents/: __init__.py
src/novel_memory/art/: director.py
src/novel_memory/memory/: __init__.py  adaptive_summarizer.py  chromadb_manager.py  enhanced_manager.py  hierarchical_memory.py  manager.py  markdown_persistence.py  protected_system.py
src/novel_memory/models/: abstraction_layer.py
src/novel_memory/observability/: system.py
src/novel_memory/proofreading/: proofreader.py
src/novel_memory/translation/: __init__.py  translator.py
